fix letter-spacing

--- a/assets/css/Footer-Multi-Column-icons.css
+++ b/assets/css/Footer-Multi-Column-icons.css
@@ -129,6 +129,7 @@ a {
 .article-card-title {
   font-size: 25px;
   font-weight: 300;
+  letter-spacing: 0px;
 }
 
 .article-title {
